--- a/kustomize/deployment.yaml
+++ b/kustomize/deployment.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
       - name: podinfod
-        image: ghcr.io/stefanprodan/podinfo:6.5.2
+        image: cvergarae/podinfo:dev-1
         imagePullPolicy: IfNotPresent
         ports:
         - name: http
